--- a/pom.xml
+++ b/pom.xml
@@ -22,15 +22,39 @@
             <artifactId>flatlaf</artifactId>
             <version>3.6.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.formdev/flatlaf-extras -->
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf-extras</artifactId>
+            <version>3.6.2</version>
+            <type>jar</type>
+        </dependency>
+        <!-- REPOSITORIOS -->
         <dependency>
             <groupId>com.github.Jilmar01</groupId>
             <artifactId>JilmarRound</artifactId>
             <version>master</version>
         </dependency>
         <dependency>
+            <groupId>com.github.f4hrid</groupId>
+            <artifactId>TextAreaLabel-Custom</artifactId>
+            <version>b94e02f</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.f4hrid</groupId>
+            <artifactId>LabelSVG-Custom</artifactId>
+            <version>139b14f</version>
+        </dependency>
+        <!-- OTROS -->
+        <dependency>
             <groupId>org.netbeans.external</groupId>
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE270</version>
         </dependency>
+        <dependency>
+	  <groupId>io.github.blackears</groupId>
+	  <artifactId>svg-salamander</artifactId>
+	  <version>1.1.5.3</version>
+	</dependency>
     </dependencies>
 </project>
