--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>24</maven.compiler.release>
-        <exec.mainClass>main.main</exec.mainClass>
+        <exec.mainClass>main.Main</exec.mainClass>
     </properties>
     <repositories>
         <repository>
